fix points overflow

--- a/src/scss/common/layout.scss
+++ b/src/scss/common/layout.scss
@@ -120,7 +120,6 @@
 	margin-bottom: 16px;
 
 	.meme-description-top-points {
-		width: 63px;
 		height: 18px;
 		font-family: 'Source Sans Pro';
 		font-size: 14px;
